--- a/src/FlintSoft.CRM.Infrastructure/FlintSoft.CRM.Infrastructure.csproj
+++ b/src/FlintSoft.CRM.Infrastructure/FlintSoft.CRM.Infrastructure.csproj
@@ -1,13 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\FlintSoft.CRM.Application\FlintSoft.CRM.Application.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+      <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FlintSoft.CRM.Application\FlintSoft.CRM.Application.csproj" />
+  </ItemGroup>
+
 
 </Project>
