--- a/src/FlintSoft.CRM.Api/FlintSoft.CRM.Api.csproj
+++ b/src/FlintSoft.CRM.Api/FlintSoft.CRM.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>934b25e1-85a6-4822-bcf3-b18fd4857fbe</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
