--- a/src/FlintSoft.CRM.Api/appsettings.Development.json
+++ b/src/FlintSoft.CRM.Api/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "ExpiryMinutes": 60,
+    "Issuer": "FlintSoft.CRM",
+    "Audience": "FlintSoft.CRM"
   }
 }
