--- a/src/FlintSoft.CRM.Infrastructure/FlintSoft.CRM.Infrastructure.csproj
+++ b/src/FlintSoft.CRM.Infrastructure/FlintSoft.CRM.Infrastructure.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
       <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FlintSoft.CRM.Application\FlintSoft.CRM.Application.csproj" />
