--- a/src/FlintSoft.CRM.Application/FlintSoft.CRM.Application.csproj
+++ b/src/FlintSoft.CRM.Application/FlintSoft.CRM.Application.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Common\Errors\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
