--- a/src/FlintSoft.CRM.Application/FlintSoft.CRM.Application.csproj
+++ b/src/FlintSoft.CRM.Application/FlintSoft.CRM.Application.csproj
@@ -6,10 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Common\Errors\" />
+    <PackageReference Include="OneOf" Version="3.0.271" />
   </ItemGroup>
 
   <PropertyGroup>
