--- a/src/FlintSoft.CRM.Api/FlintSoft.CRM.Api.csproj
+++ b/src/FlintSoft.CRM.Api/FlintSoft.CRM.Api.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FlintSoft.Endpoints" Version="0.1.4" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
